# Nebula-Browser

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: OZELLIKLER.md
release/: README.md  latest.json
scripts/: publish-release.ps1  setup-google-oauth-appdata.ps1  setup-updater-keys.ps1
src/: App.tsx  ChromeApp.tsx  main.tsx  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: webview-commands.toml
src-tauri/src/: browser_bookmarks.rs  browser_passwords.rs  google_oauth.rs  lib.rs  password_webview.rs  site_fullscreen_window.rs  system_stats.rs  tab_error_page.rs  tab_fullscreen.rs  webview_controls.rs
src/core/: appReset.ts  appUpdater.ts  appVersion.ts  bookmarkImport.ts  browseSession.ts  browserShortcuts.ts  browserTab.ts  browsingDock.ts  constants.ts  googleAccountSetup.ts  googleBrowserSession.ts  googleSignIn.ts  homeLayout.ts  homeMenuStorage.ts  locale.ts  localeMessages.ts  lunarShape.ts  lunarSizing.ts  navigateShortcut.ts  nebulaAccount.ts  nebulaBridge.ts  nebulaSettings.ts  onboarding.ts  passwordBridgeScript.ts  passwordImport.ts  passwordMatch.ts  passwordVault.ts  pinnedShortcuts.ts  semiLunarSettings.ts  settingsCategories.ts  shortcutDrop.ts  shortcutFromUrl.ts  shortcutImport.ts  shortcutLayout.ts  shortcutPreferences.ts  spatial.ts  storageSync.ts  types.ts  wallpaperStorage.ts  widgets.ts  (+1 more)
src/hooks/: useBrowseSessions.ts  useBrowserShortcuts.ts  useBrowserTabs.ts  (+15 more)
(+87 files in other folders)
