[package]
name = "app"
version = "0.1.3"
description = "Nebula Browser"
authors = ["Nebula"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["unstable"] }
tauri-plugin-log = "2"
url = "2.5"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security_Cryptography", "Win32_System_Com", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.61"
sysinfo = "0.33"
webview2-com = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
urlencoding = "2"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
